diesel_compile_tests/tests/fail/derive/bad_as_changeset.stderr
error[E0277]: the trait bound `i32: AsExpression<Nullable<Text>>` is not satisfied
  --> tests/fail/derive/bad_as_changeset.rs:23:5
   |
LL | #[derive(AsChangeset)]
   |          ----------- in this derive macro expansion
...
LL |     hair_color: Option<i32>,
   |     ^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `AsExpression<diesel::sql_types::Nullable<diesel::sql_types::Text>>` is not implemented for `i32`
help: the following other types implement trait `AsExpression<T>`
  --> DIESEL/diesel/diesel/src/type_impls/primitives.rs
   |
LL |     #[derive(AsExpression, FromSqlRow)]
   |              ^^^^^^^^^^^^
   |              |
   |              `&i32` implements `AsExpression<diesel::sql_types::Integer>`
   |              `i32` implements `AsExpression<diesel::sql_types::Integer>`
   |              `i32` implements `AsExpression<Nullable<Integer>>`
   = help: see issue #48214

      = note: this error originates in the derive macro `AsChangeset` which comes from the expansion of the derive macro `AsExpression` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i32: AppearsOnTable<users::table>` is not satisfied
  --> tests/fail/derive/bad_as_changeset.rs:11:10
   |
LL | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^ the trait `AppearsOnTable<users::table>` is not implemented for `i32`
   |
   = help: the following other types implement trait `AppearsOnTable<QS>`:
             `&'a T` implements `AppearsOnTable<QS>`
             `(T, T1)` implements `AppearsOnTable<QS>`
             `(T, T1, T2)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5, T6)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5, T6, T7)` implements `AppearsOnTable<QS>`
           and N others
   = note: required for `diesel::expression::operators::Eq<columns::name, i32>` to implement `diesel::AsChangeset`

      = note: this error originates in the derive macro `AsChangeset` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `&i32: AsExpression<Nullable<Text>>` is not satisfied
  --> tests/fail/derive/bad_as_changeset.rs:11:10
   |
LL | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `AsExpression<diesel::sql_types::Nullable<diesel::sql_types::Text>>` is not implemented for `&'update i32`
help: the following other types implement trait `AsExpression<T>`
  --> DIESEL/diesel/diesel/src/type_impls/primitives.rs
   |
LL |     #[derive(AsExpression, FromSqlRow)]
   |              ^^^^^^^^^^^^
   |              |
   |              `&i32` implements `AsExpression<diesel::sql_types::Integer>`
   |              `i32` implements `AsExpression<diesel::sql_types::Integer>`
   |              `i32` implements `AsExpression<Nullable<Integer>>`

      = note: this error originates in the derive macro `AsChangeset` which comes from the expansion of the derive macro `AsExpression` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `&'update i32: AsExpression<diesel::sql_types::Text>` is not satisfied
  --> tests/fail/derive/bad_as_changeset.rs:11:10
   |
LL | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^ the trait `AsExpression<diesel::sql_types::Text>` is not implemented for `&'update i32`
   |
help: the following other types implement trait `AsExpression<T>`
  --> DIESEL/diesel/diesel/src/type_impls/primitives.rs
   |
LL |     #[derive(AsExpression, FromSqlRow)]
   |              ^^^^^^^^^^^^
   |              |
   |              `&i32` implements `AsExpression<diesel::sql_types::Integer>`
   |              `i32` implements `AsExpression<diesel::sql_types::Integer>`
   |              `i32` implements `AsExpression<Nullable<Integer>>`

      = note: this error originates in the derive macro `AsChangeset` which comes from the expansion of the derive macro `AsExpression` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i32: AppearsOnTable<users::table>` is not satisfied
  --> tests/fail/derive/bad_as_changeset.rs:11:10
   |
LL | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^ the trait `AppearsOnTable<users::table>` is not implemented for `i32`
   |
   = help: the following other types implement trait `AppearsOnTable<QS>`:
             `&'a T` implements `AppearsOnTable<QS>`
             `(T, T1)` implements `AppearsOnTable<QS>`
             `(T, T1, T2)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5, T6)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5, T6, T7)` implements `AppearsOnTable<QS>`
           and N others
   = note: required for `&'update i32` to implement `AppearsOnTable<users::table>`
   = note: required for `diesel::expression::operators::Eq<columns::name, &'update i32>` to implement `diesel::AsChangeset`

      = note: this error originates in the derive macro `AsChangeset` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `&i32: AsExpression<Nullable<Text>>` is not satisfied
  --> tests/fail/derive/bad_as_changeset.rs:11:10
   |
LL | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `AsExpression<diesel::sql_types::Nullable<diesel::sql_types::Text>>` is not implemented for `&i32`
help: the following other types implement trait `AsExpression<T>`
  --> DIESEL/diesel/diesel/src/type_impls/primitives.rs
   |
LL |     #[derive(AsExpression, FromSqlRow)]
   |              ^^^^^^^^^^^^
   |              |
   |              `&i32` implements `AsExpression<diesel::sql_types::Integer>`
   |              `i32` implements `AsExpression<diesel::sql_types::Integer>`
   |              `i32` implements `AsExpression<Nullable<Integer>>`
note: required for `&'update User` to implement `diesel::AsChangeset`
  --> tests/fail/derive/bad_as_changeset.rs:11:10
   |
LL | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro

      = note: this error originates in the derive macro `AsChangeset` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i32: AppearsOnTable<users::table>` is not satisfied
  --> tests/fail/derive/bad_as_changeset.rs:11:10
   |
LL | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^ the trait `AppearsOnTable<users::table>` is not implemented for `i32`
   |
   = help: the following other types implement trait `AppearsOnTable<QS>`:
             `&'a T` implements `AppearsOnTable<QS>`
             `(T, T1)` implements `AppearsOnTable<QS>`
             `(T, T1, T2)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5, T6)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5, T6, T7)` implements `AppearsOnTable<QS>`
           and N others
   = note: required for `&'update i32` to implement `AppearsOnTable<users::table>`
   = note: required for `diesel::expression::operators::Eq<columns::name, &'update i32>` to implement `diesel::AsChangeset`
   = note: 1 redundant requirement hidden
   = note: required for `(Grouped<Eq<name, &i32>>, Option<Grouped<...>>)` to implement `diesel::AsChangeset`

      = note: this error originates in the derive macro `AsChangeset` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i32: AppearsOnTable<users::table>` is not satisfied
  --> tests/fail/derive/bad_as_changeset.rs:11:10
   |
LL | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^ the trait `AppearsOnTable<users::table>` is not implemented for `i32`
   |
   = help: the following other types implement trait `AppearsOnTable<QS>`:
             `&'a T` implements `AppearsOnTable<QS>`
             `(T, T1)` implements `AppearsOnTable<QS>`
             `(T, T1, T2)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5, T6)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5, T6, T7)` implements `AppearsOnTable<QS>`
           and N others
   = note: required for `diesel::expression::operators::Eq<columns::name, i32>` to implement `diesel::AsChangeset`
   = note: 1 redundant requirement hidden
   = note: required for `(Grouped<Eq<name, i32>>, Option<Grouped<...>>)` to implement `diesel::AsChangeset`

      = note: this error originates in the derive macro `AsChangeset` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i32: AppearsOnTable<users::table>` is not satisfied
  --> tests/fail/derive/bad_as_changeset.rs:11:10
   |
LL | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^ the trait `AppearsOnTable<users::table>` is not implemented for `i32`
   |
   = help: the following other types implement trait `AppearsOnTable<QS>`:
             `&'a T` implements `AppearsOnTable<QS>`
             `(T, T1)` implements `AppearsOnTable<QS>`
             `(T, T1, T2)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5, T6)` implements `AppearsOnTable<QS>`
             `(T, T1, T2, T3, T4, T5, T6, T7)` implements `AppearsOnTable<QS>`
           and N others
   = note: required for `&i32` to implement `AppearsOnTable<users::table>`
   = note: required for `diesel::expression::operators::Eq<columns::name, &i32>` to implement `diesel::AsChangeset`
   = note: 2 redundant requirements hidden
   = note: required for `&'update User` to implement `diesel::AsChangeset`

      = note: this error originates in the derive macro `AsChangeset` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0277`.
